--- a/style.css
+++ b/style.css
@@ -46,10 +46,11 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   color: #f4f4f4;
+  transition: 0.6s ease;
 }
 
 .navbar ul li a:hover {
-  color: skyblue;
+  color: rgb(184, 118, 32);
 }
 
 section {
@@ -65,6 +66,22 @@ section {
 
 section h1 {
   font-size: 4rem;
+  transition: 0.6s ease;
+}
+section h1:hover {
+  transform: scale(1.05);
+  cursor: default;
+}
+section h2 {
+  transform: translateY(-30px);
+  font-size: 2.5rem;
+  font-family: "Roboto", sans-serif;
+  transition: 0.6s ease;
+}
+section h2:hover {
+  transform: scale(1.05) translateY(-30px);
+  font-family: "Roboto", sans-serif;
+  cursor: default;
 }
 
 section p {
@@ -86,4 +103,42 @@ section#past-work {
 section#contact {
   background: url("https://images.unsplash.com/photo-1422246654994-34520d5a0340?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80")
     no-repeat center center/cover;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+input {
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+  border-radius: 0.4rem;
+  border: 1px solid rgb(212, 111, 52);
+  background: white;
+  transition: 0.6s ease;
+}
+
+input:hover {
+  width: 100%;
+}
+
+textarea {
+  cursor: pointer;
+  border-radius: 0.4rem;
+  border: 1px solid rgb(212, 111, 52);
+  background: white;
+}
+
+button {
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+  border-radius: 0.4rem;
+  border: 1px solid rgb(212, 111, 52);
+  background: white;
 }
