--- a/style.css
+++ b/style.css
@@ -80,13 +80,13 @@ section h2 {
 }
 
 a#after {
-  transform: translateY(-30px);
+  transform: translateY(100px);
   font-size: 2.5rem;
   font-family: "Roboto", sans-serif;
   transition: 0.6s ease;
 }
 a#after:hover {
-  transform: translateY(-30px) scale(1.1);
+  transform: translateY(100px) scale(1.1);
 }
 a#before {
   transform: translateY(-30px);
@@ -107,15 +107,40 @@ a#previous-work {
 a#previous-work:hover {
   transform: translateY(-30px) scale(1.05);
 }
+a#more-pantry {
+  transform: translateY(300px);
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.6s ease;
+}
+a#more-pantry:hover {
+  transform: translateY(300px) scale(1.05);
+}
+a#back-to-kitchen {
+  transform: translateY(-230px);
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.6s ease;
+}
+a#back-to-kitchen:hover {
+  transform: translateY(-230px) scale(1.05);
+}
 p#scroll-for-pictures {
   transform: translateY(-45px);
   font-size: 1.5rem;
-
-
 }
 
-h1#h1-kitchen-before:hover {
-  transform: scale(1);
+h1#h1-kitchen-before {
+  transform: scale(1) translateY(130px);
+}
+
+h1#pantry-before {
+  transform:  translateX(-300px) translateY(210px) scale(1);
+}
+h1#pantry-after {
+  transform: translateX(300px) translateY(110px)scale(1);
 }
 
 section h2:hover {
@@ -151,6 +176,9 @@ section#kitchen-after {
 section#previous-work {
   background: url("https://images.pexels.com/photos/172289/pexels-photo-172289.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260")
     no-repeat center center/cover;
+}
+section#pantry {
+  background: url(/pantry.png) no-repeat center center/cover;
 }
 
 form {
@@ -233,7 +261,7 @@ h2#master-carpenter {
 }
 p#kitchen-remodeling {
   font-size: 40px;
-  transform: translateY(30px);
+  transform: translateY(160px);
 }
 
 p#custom-carpentry {
